<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Attendance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="title">Students</string>
	<string name="plus">"+"</string>
	<string name="adduser">"Add User"</string>
	<string name="user">"Student Roll Number"</string>
	<string name="hintRollNumber">"Enter student's roll number"</string>
	<string name="save">"Save"</string>
	<string name="cancel">"Cancel"</string>
	<string name="adduseractivitylabel">"Add User Activity"</string>
	<string name="welcomeString">"Welcome"</string>
	<string name ="preference_registration">registrationPreferences</string>
	<string name ="userNamePrompt">UserName:</string>
	<string name ="passwordPrompt">Password:</string>
	<string name ="loginButton">Login</string>
	<string name ="homeScreenTitle">mGuru Attendance</string>
	<string name="firstNameView">First Name</string>
	<string name="lastNameView">Last Name</string>
	<string name="dateBirthView">Date of birth</string>
	<string name="buttonDate">Set Date of Birth</string>
	<string name="admissionNumberView">Admission Number</string>
	
</resources>
